tests/reference/ast-fixed_form_6-1dd815c.stderr
tokenizer error: Expecting terminating symbol for program
 --> tests/errors/fixed_form_6.f:3:11
  |
3 |           PAUSE
  |           ^ 
